added hyperlinks to full stack portfolio and email

--- a/blog.html
+++ b/blog.html
@@ -36,13 +36,13 @@
 <footer>
     <h4 id="made-with">Made with &#10084; by Nevah Evans</h4>
     <span id="portfolio">
-        <p><strong>Portfolio:</strong> Nevah Evans</p>
+        <p><strong>Portfolio:</strong><a href="https://nevah-evans.github.io/full-stack-portfolio/">Nevah Evans</a></p>
     </span>
     <span id="blog">
-        <p><strong>Blog:</strong>Full-Stack Blog</p>
+        <p><strong>Blog: </strong>Full-Stack Blog</p>
     </span>
     <span id="email">
-        <p><strong>Email:</strong>nevahevans@yahoo.com</p>
+        <p><strong>Email:</strong> <a href="mailto:nevahevans@yahoo.com">nevahevans@yahoo.com</a></p>
     </span>
 </footer>
 <script src="./assets/js/logic.js"></script>
